# kota-db

./: .dockerignore  .env.dev  .env.example  .gitignore  .mcp.json  .mcp.json.example  AGENT.md  AGENTS.md  AGENT_CONTEXT.md  BTREE_DELETION_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CLI_USAGE.md  CNAME  CONTRIBUTING.md  Cargo.toml  DEV_GUIDE.md  DOCKER.md  DOGFOODING_ROUND2.md  Dockerfile  Dockerfile.ci  Dockerfile.dev  Dockerfile.mcp  Dockerfile.mcp-simple  Dockerfile.prod  Dockerfile.production  INVESTIGATION.md  LICENSE  MCP_INTEGRATION_PLAN.md  MIGRATION_GUIDE.md  MIGRATION_NOTES.md  OUTSTANDING_ISSUES.md  PERFORMANCE_FIX_SUMMARY.md  PERFORMANCE_REPORT.md  PHASE_2_OPTIMIZATION_COMPLETE.md  PYRAMID_REBALANCING_PLAN.md  README.md  REMOVAL_PLAN.md  ROADMAP.md  SETUP_PACKAGE_PUBLISHING.md  (+41 more)
.cargo/: audit.toml  config.toml
.config/: nextest.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.tmp_pr_cleanup/: api_v1_services_server_test.rs  services_http_server.rs
0.3.0/: 404.html  index.html  sitemap.xml
0.3.1/: 404.html  index.html  sitemap.xml
0.4.0/: 404.html  index.html  sitemap.xml
0.5.0/: 404.html  index.html  sitemap.xml
0.6.0/: 404.html  index.html  requirements.txt  sitemap.xml
0.6.1/: 404.html  index.html  sitemap.xml
0.6.2/: 404.html  index.html  sitemap.xml
benches/: binary_relationship_engine_bench.rs  code_analysis_bench.rs  codebase_intelligence_bench.rs  concurrent_performance.rs  concurrent_performance_simple.rs  hybrid_relationship_engine_bench.rs  index_stress.rs  indices.rs  queries.rs  query_routing_performance.rs  resource_usage_bench.rs  storage.rs  storage_stress.rs  stress_data_generator.rs
clients/python/: .coverage  .pre-commit-config.yaml  Makefile  TESTING.md  coverage.xml  pyproject.toml  setup.py
clients/python/.hypothesis/constants/: 20bdb79c4fde0551  732ec6b8834a0ff0  7cf33da89e5b98ab  aabbd5641c616157
clients/python/examples/: README.md  basic_usage.py  builder_patterns.py  comprehensive_usage.py  connection_examples.py  integration_test.py  performance_test.py  server_management.py
clients/python/kotadb/: __init__.py  builders.py  client.py  exceptions.py  server.py  types.py  validation.py
clients/python/kotadb_client.egg-info/: PKG-INFO  requires.txt
clients/python/tests/: test_benchmark.py  test_client.py  test_integration.py  test_property.py  test_stress.py
dev/: 404.html  index.html  sitemap.xml
docs/: API.md  API_REFERENCE.md  BRANCHING_STRATEGY.md  CI_STATUS.md  FILESTORAGE_IMPLEMENTATION.md  FLY_DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  LLM_ASSISTED_DEVELOPMENT_SUCCESS_PATTERNS.md  MCP_IMPLEMENTATIONS.md  MIGRATION_GUIDE_v0.5.1.md  QUICK_REFERENCE.md  README.md  RELEASE_PROCESS.md  SERVICES_ARCHITECTURE.md  STAGE6_COMPONENT_LIBRARY.md  SUPABASE_ARCHITECTURE.md  VERSIONING.md  _backlog-archive-20250927.json  agent-summaries-2025-01-18.md  ci_aware_test_thresholds.md  contributing.md  index.md  installation.md  issue_cleanup_rubric.md  issue_cleanup_stage2_keepers.md  issue_cleanup_stage3_plan.md  issue_cleanup_stage4_guardrails.md  issue_triage_stage2.md  quick-start.md  requirements.txt  search_sanitization_and_thresholds.md
dogfood-test/: symbols.kota
examples/: 01_personal_knowledge_base.rs  02_research_project_manager.rs  02_research_project_manager.rs.backup  03_meeting_notes_system.rs  COMPREHENSIVE-GUIDE.md  MCP_SETUP_GUIDE.md  README.md  claude-code-mcp.json  demo_cli.sh  file_storage_demo.rs  python_kotadb_demo.py  relationship_queries.md  standalone_usage.rs  symbol_extraction_demo.rs  tree_sitter_demo.rs  typescript_kotadb_demo.js  typescript_kotadb_demo.ts
handoffs/: 2025-07-02-Database-Planning-v1.md  2025-07-02-Memory-Architecture-v1.md  README.md
hooks/: prepare-commit-msg
kotadb-data/: symbols.kota
kotadb-mcp-package/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
monitoring/: kotadb-rules.yml  prometheus.yml
quickstart/: README.md  install.sh  nginx.conf  package.json  python-demo.py  shell-installer.sh  tsconfig.json  typescript-demo.ts
scripts/: check-absolute-paths.sh  check-railway-status.sh  check_pooler_connection.sh  ci-test-local.sh  codex_rewrite_docs.sh  deploy-fly.sh  docker-entrypoint.sh  dogfood.sh  fly-secrets.sh  infrastructure_test.sh  init-mike-docs.sh  local-ci.sh  mcp_smoke.sh  release.sh  saas_smoke.sh  setup-git-hooks.sh  supabase-apply-remote.sh  supabase-generate-migration.sh  supabase-reset-local.sh  supabase-setup-minimal.sql  test-local-docker.sh  test-nextest-archive.sh  test-server-startup.sh  test-single-compilation.sh  verify-ci.sh  version-bump.sh
site/: 404.html  index.html  sitemap.xml
src/: api_keys.rs  auth_middleware.rs  binary_relationship_bridge.rs  binary_relationship_engine.rs  binary_relationship_engine_async.rs  binary_symbols.rs  binary_trigram_index.rs  btree_test.rs  builders.rs  codebase_intelligence_api.rs  connection_pool.rs  contracts.rs  coordinated_deletion.rs  database.rs  dependency_extractor.rs  documentation_verification.rs  embedding_transformer.rs  embeddings.rs  factory.rs  file_storage.rs  graph_storage.rs  http_server.rs  http_types.rs  hybrid_relationship_engine.rs  hybrid_storage.rs  intent_mcp_server.rs  lib.rs  llm_search.rs  main.rs  mcp_api_mapper.rs  mcp_bridge_safe.rs  mcp_http_bridge.rs  memory.rs  native_graph_storage.rs  natural_language_query.rs  observability.rs  path_utils.rs  primary_index.rs  pure.rs  query_sanitization.rs  (+11 more)
stable/: 404.html  index.html  sitemap.xml
supabase/: config.toml  seed.sql
temp-src/: lib.rs  types.rs
test-api-data/: symbols.kota
tests/: adversarial_tests.rs  ai_assistant_workflow_test.rs  api_key_integration_tests.rs  api_relationship_endpoints_test.rs  api_v1_services_server_test.rs  async_http_handler_test.rs  benchmark_command_test.rs  binary_index_integration.rs  binary_relationship_bridge_test.rs  binary_symbols_integration_test.rs  btree_algorithms_test.rs  btree_performance_test.rs  builder_tests.rs  bulk_operations_test.rs  chaos_tests.rs  cli_defaults_validation_test.rs  git_test_helpers.rs  (+84 more)
(+26304 files in other folders)
