[package]
name = "kotadb"
version = "0.1.0"
edition = "2021"
authors = ["KotaDB Contributors"]
description = "A custom database for distributed human-AI cognition"
repository = "https://github.com/jayminwest/kota-db"
license = "Proprietary"
readme = "README.md"
keywords = ["database", "cognitive", "knowledge-graph", "semantic-search"]
categories = ["database-implementations", "data-structures"]

[lib]
name = "kotadb"
path = "src/lib.rs"

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"
rmp-serde = "1.3"  # MessagePack

# Data structures
bytes = "1.7"
smallvec = "1.13"
smallstr = "0.3"
dashmap = "6.0"
indexmap = "2.5"

# Compression
zstd = "0.13"
lz4 = "1.28"

# Memory mapping
memmap2 = "0.9"

# File watching
notify = "6.1"

# Checksums
crc32c = "0.6"
sha2 = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Bitmaps
roaring = "0.10"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Testing & Benchmarking
criterion = { version = "0.5", optional = true }
proptest = { version = "1.5", optional = true }
tempfile = "3.12"

# Traits
async-trait = "0.1"

# Random for testing
rand = "0.8"
fastrand = "2.3"

# Optional dependencies for advanced features
tantivy = { version = "0.22", optional = true }  # Full-text search
hnsw = { version = "0.11", optional = true }     # Vector search

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"
pretty_assertions = "1.4"
fake = "2.10"
rand = "0.8"
tokio-test = "0.4"
tempfile = "3.0"

[features]
default = []
# Advanced search features
advanced-search = ["tantivy", "hnsw"]
# Benchmarking
bench = ["criterion", "proptest"]
# Development features
dev = ["bench"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3

[[bin]]
name = "kotadb"
path = "src/main.rs"

[[example]]
name = "standalone_usage"
path = "examples/standalone_usage.rs"

# Benchmarks
[[bench]]
name = "storage"
harness = false
required-features = ["bench"]

[[bench]]
name = "indices" 
harness = false
required-features = ["bench"]

[[bench]]
name = "queries"
harness = false
required-features = ["bench"]

# Workspace will be configured when we create the sub-crates
